# High_Performance_Blockchain_Node

./: .gitignore  API_REFERENCE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  genesis.json  setup_windows.bat
.github/workflows/: ci.yml
benches/: consensus_benchmark.rs  network_benchmark.rs
config/: README.md
docs/: ARCHITECTURE.md  DOCUMENTATION.md  PROJECT_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md
scripts/: build_and_test.bat  build_and_test.sh  run_testnet.py  setup_git.bat  setup_git.sh
src/: api.rs  cli.rs  main.rs  mempool.rs  metrics.rs  node.rs  types.rs  validation.rs
src/consensus/: leader_election.rs  mod.rs  pbft.rs  view_change.rs
src/network/: discovery.rs  gossip.rs  mod.rs  transport.rs
src/storage/: block_store.rs  mod.rs  state_store.rs  transaction_store.rs
tools/: README.md  setup_windows.ps1
