[package]
name = "blockchain-node"
version = "0.1.0"
edition = "2021"
authors = ["Blockchain Node Team"]
description = "High-throughput, fault-tolerant blockchain node"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Networking
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "kad",
    "identify",
    "ping",
    "macros",
    "tokio"
] }

# Storage
rocksdb = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"
metrics-prometheus = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# JSON-RPC
jsonrpsee = { version = "0.20", features = ["server", "client"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "consensus_benchmark"
harness = false

[[bench]]
name = "network_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
